deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gin-pocketfm-app
  labels:
    app: gin-pocketfm-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gin-pocketfm-app
  template:
    metadata:
      labels:
        app: gin-pocketfm-app
    spec:
      containers:
      - name: gin-pocketfm-app
        image: gin-pocketfm-app:v1.0
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: gin-pocketfm-service
spec:
  selector:
    app: gin-pocketfm-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: NodePort
