envoy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  namespace: envoy-ns
  labels:
    app: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:v1.29-latest
        args:
          - "-c"
          - "/etc/envoy/envoy.yaml"
        ports:
          - containerPort: 8080
        volumeMounts:
          - name: envoy-config
            mountPath: /etc/envoy
            readOnly: true
      volumes:
        - name: envoy-config
          configMap:
            name: envoy-config
---
apiVersion: v1
kind: Service
metadata:
  name: envoy
  namespace: envoy-ns
spec:
  selector:
    app: envoy
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30010
