envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: gin_service
          http_filters:
          - name: envoy.filters.http.jwt_authn
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
              providers:
                my-jwt-provider:
                  issuer: "my-issuer"
                  local_jwks:
                    inline_string: |
                      {
                        "keys": [
                          {
                            "alg": "RS256",
                            "e": "AQAB",
                            "kid": "mykey",
                            "kty": "RSA",
                            "n": "ylhBERkbPx-_ShqtGc99fctRgPPClRyXMqHSIQ4Ptc9aMPhFkcfnk5MAGW26bksL6t5KJFvy_5tTv_joLL9drVv-vJ-C63Yn9_O3WWY1d9MKvPq-cd6mrZQfcW0OSFAvjVW5_9osvZ9DZDDvfkHFCtcjOcga8KQ-CnNCX14fNTFoUp9St-xuLhxZbRZf9VcCF0lFlxKKbq0IIZZ6fAI6CCq4Vo98xrzBYCgC2qEdYaOwESnpcvmKCvbuLF5FYwOPSPliwtPUwueiICiANfqDKggm0ylJoxCYB-LxN2Dmq1vnG0dTHiZ4Kn8hg8gEX0NNcs8MRalPQDM7ZZ2NVi3Juw",
                            "use": "sig"
                          }
                        ]
                      }
                  from_headers:
                    - name: Authorization
                      value_prefix: "Bearer "
                  forward: true
              rules:
              - match:
                  prefix: "/"
                requires:
                  provider_name: "my-jwt-provider"
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: gin_service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: gin_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: gin-pocketfm-service.pocket-fm.svc.cluster.local
                port_value: 8000
